Footer on mobile view fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -303,6 +303,12 @@ img.IUPUI-logo{
 /* THIRD MEDIA BREAKPOINT FOR FOOTER*/
 
 @media screen and (max-width: 600px) {
+  
+  body{
+    margin-top: 15%;
+  }
+
+  /*Footer resize and logos to text links*/
   .HH-logo {
     display: none;
   }
@@ -314,7 +320,17 @@ img.IUPUI-logo{
   .textLink {
     display: block;
   }
-  body{
-    margin-top: 15%;
+
+  #logos {
+    width: 35%;
   }
+
+  .footernav {
+    width: 60%;
+  }
+
+  a.footerlinks {
+   font-size: 15px !important;
+ }
+
 }
